search: reintroduce the categories in the live search
In the existing Rails app, when the user types a search term into the
search box, the results are sorted into the categories "Reference" and
"Book". Let's do the same with the Pagefind-based search.

We do this by specifically adding metadata indicating the category of
manual pages as well as for the sections of the book (for details, see
https://pagefind.app/docs/metadata/). Then, we use that information to
sort the results as they arrive into the correct table row (and
displaying it when necessary, as the empty rows are initially hidden).

Signed-off-by: Johannes Schindelin <johannes.schindelin@gmx.de>

--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -87,7 +87,7 @@
               2nd Edition
             </span>
           </div>
-          <div id="main" data-pagefind-filter="category:{{ $section }}" data-pagefind-weight="0.05" data-pagefind-body class="book edition2">
+          <div id="main" data-pagefind-filter="category:{{ $section }}" data-pagefind-meta="category:Book" data-pagefind-weight="0.05" data-pagefind-body class="book edition2">
             <h1>{{ .Params.book.section.cs_number }} {{ .Params.book.chapter.title }} - {{ .Params.book.section.title }}</h1>
             <div>
               {{ .Content }}
@@ -109,7 +109,7 @@
 
           <!-- older manual page versions are less interesting and need to be excluded from the search -->
           {{ $include_in_search := (or (not (isset .Params "docname")) (isset .Params "latest-changes")) }}
-          <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:{{ $section }}" data-pagefind-weight="0.05" data-pagefind-body{{ end }}>
+          <div id="main"{{ if $include_in_search }} data-pagefind-filter="category:{{ $section }}" data-pagefind-meta="category:Reference" data-pagefind-weight="0.05" data-pagefind-body{{ end }}>
             {{ .Content }}
             {{ $match := findRESubmatch "(?s)>NAME</h2>.*?<p[^>]*>(git-)?([^ ]+)" .Content 1 }}
             {{ if (eq ($match | len) 1) }}
